--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ layout: default
 
 {% for post in site.posts %}
 <a href="{{ post.url }}">
+    <img src="{% post.feature_img %}" />
     <h2>{{ post.title}}</h2>
     <p>{{ post.excerpt }}</p>
     <p class="read-more">Read more<img src=""></p>
