--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 
 {% for post in site.posts %}
 <a href="{{ post.url }}">
-    <img src="{% feature_img %}">
+    <img src="{% featured_img %}">
     <h2>{{ post.title}}</h2>
     <p>{{ post.excerpt }}</p>
     <p class="read-more">Read more<img src=""></p>
