--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 
 {% for post in site.posts %}
 <a href="{{ post.url }}">
-    <img src="{{ site.baseurl }}/_uploads/{{ post.image }}">
+    <img src="{{ site.baseurl }}{{ post.image }}">
     <h2>{{ post.title}}</h2>
     <p>{{ post.excerpt }}</p>
     <p class="read-more">Read more<img src=""></p>
