update logo header V6j

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
     <img src="{{ site.baseurl }}{{ post.image }}">
     <h2>{{ post.title}}</h2>
     <p>{{ post.excerpt }}</p>
-    <p class="read-more">Read more<img src="/assets/images/chevron.svg"></p>
+    <p class="read-more">Read more<img src=""></p>
 </a>
 {% endfor %}
 
